Added local files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Hello!</h1></h1>
+<head>
+  <title>Count</title>
+</head>
+
+<canvas id="gc" width="420" height="420"></canvas>
+
+<script src = "Startup.js"></script>
+<script src = "Completed.js"></script>
+<script src = "Multiplication.js"></script>
+<script src = "Menu.js"></script>
+<script src = "Counting.js"></script>
+<script src = "ToNext.js"></script>
+<script src = "NextTens.js"></script>
+<script src = "ToFifty.js"></script>
+<script src = "ToTimeEasy.js"></script>
+<script src = "IsLarger.js"></script>
+<script src = "Adding.js"></script>
+<script src = "Subtracting.js"></script>
+<script src = "TrippleAdding.js"></script>
